--- a/src/main/resources/assets/starminer/lang/en_us.json
+++ b/src/main/resources/assets/starminer/lang/en_us.json
@@ -1,4 +1,4 @@
 {
-  "itemGroup.starminer" : "Starminer Reborn Items",
+  "itemGroup.Starminer_Reborn" : "Starminer Reborn",
   "item.starminer.camelia" : "Camelia"
 }
